--- a/style.css
+++ b/style.css
@@ -1,4 +1,78 @@
 body {
     margin: 0;
     font-family: "PT Sans", sans-serif;
+    color: white;
+}
+.aot {
+    background-image: url('./img/header.png');
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+header img {
+    width: 100px;
+}
+.navLink {
+    color: white;
+    text-decoration: none;
+    margin-left: 16px;
+}
+.navLink:hover {
+    color: #AB8550;
+}
+.navImage {
+    height: 24px;
+    width: auto;
+    margin-left: 16px;
+}
+.navImage:hover {
+    cursor: pointer;
+    filter: drop-shadow(0px 0px 4px #AB8550);
+}
+h1 {
+    font-size: 84px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+.button {
+    background-color: #AB8550;
+    color: white;
+    text-decoration: none;
+    padding: 16px;
+    margin-top: 24px;
+}
+
+.section-quicklinks {
+    background-color: black;
+    padding: 80px 80px;
+    display: flex;
+    justify-content: space-between;
+}
+.quicklink {
+    color: #AB8550;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.quicklink img {
+    width: 200px;
+    height: 200px;
 }
