--- a/style.css
+++ b/style.css
@@ -1,78 +1,107 @@
 body {
-    margin: 0;
-    font-family: "PT Sans", sans-serif;
-    color: white;
+  margin: 0;
+  font-family: "PT Sans", sans-serif;
+  color: white;
 }
 .aot {
-    background-image: url('./img/header.png');
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  background-image: url("./img/header.png");
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 header img {
-    width: 100px;
+  width: 100px;
 }
 .navLink {
-    color: white;
-    text-decoration: none;
-    margin-left: 16px;
+  color: white;
+  text-decoration: none;
+  margin-left: 16px;
 }
 .navLink:hover {
-    color: #AB8550;
+  color: #ab8550;
 }
 .navImage {
-    height: 24px;
-    width: auto;
-    margin-left: 16px;
+  height: 24px;
+  width: auto;
+  margin-left: 16px;
 }
 .navImage:hover {
-    cursor: pointer;
-    filter: drop-shadow(0px 0px 4px #AB8550);
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 4px #ab8550);
 }
 h1 {
-    font-size: 84px;
-    margin-block-start: 0;
-    margin-block-end: 0;
+  font-size: 84px;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 .button {
-    background-color: #AB8550;
-    color: white;
-    text-decoration: none;
-    padding: 16px;
-    margin-top: 24px;
+  background-color: #ab8550;
+  color: white;
+  text-decoration: none;
+  padding: 16px;
+}
+.mt-16 {
+  margin-top: 24px;
 }
 
 .section-quicklinks {
-    background-color: black;
-    padding: 80px 80px;
-    display: flex;
-    justify-content: space-between;
+  background-color: black;
+  padding: 80px 80px;
+  display: flex;
+  justify-content: space-between;
 }
 .quicklink {
-    color: #AB8550;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 700;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  color: #ab8550;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 .quicklink img {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
+}
+.buy-ticket-section {
+  background-color: #272727;
+  display: flex;
+  align-items: center;
+}
+.buy-ticket-img-left {
+  height: 280px;
+}
+.festival-info {
+  padding: 40px;
+  height: 200px;
+  flex: 1;
+}
+.festival-info h2 {
+  margin-block-start: 0;
+}
+.separator {
+  background-color: white;
+  width: 1px;
+  height: 200px;
+  margin-right: 20px;
+}
+.buy-ticket-container {
+  width: 300px;
+  display: flex;
+  justify-content: center;
 }
