--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ h1 {
   font-size: 84px;
   margin-block-start: 0;
   margin-block-end: 0;
+  font-family: "Viga";
+  font-weight: 100;
 }
 .button {
   background-color: #ab8550;
@@ -104,4 +106,56 @@ h1 {
   width: 300px;
   display: flex;
   justify-content: center;
+}
+.slogan-section {
+  padding: 80px 80px;
+  color: #ab8550;
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+}
+.video-section {
+  background-image: url("./img/bottom.png");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+}
+footer {
+  display: flex;
+  background-color: #000000;
+  padding: 80px 80px;
+}
+.half-width {
+  width: 50%;
+}
+.social-media-icon {
+  width: 32px;
+}
+.footer-left {
+  font-size: 24px;
+  font-weight: 700;
+  display: flex;
+  align-items: flex-end;
+  padding-right: 16px;
+}
+.footer-center {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 16px;
+}
+input {
+  height: 42px;
+  flex: 1;
+}
+input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  padding-left: 16px;
+}
+.button-footer {
+  width: 150px;
+  border-width: 0;
+}
+.footer-form {
+  display: flex;
 }
