--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h1 {
   margin-block-end: 0;
   font-family: "Viga";
   font-weight: 100;
+  text-align: center;
 }
 .button {
   background-color: #ab8550;
@@ -159,3 +160,14 @@ input::placeholder {
 .footer-form {
   display: flex;
 }
+
+@media(max-width: 700px) {
+    .display-mobile {
+        display: none;
+    }
+    h1 {
+        font-size: 48px;
+    }
+
+}
+
