--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ h1 {
   padding: 40px;
   height: 200px;
   flex: 1;
+  text-align: center;
 }
 .festival-info h2 {
   margin-block-start: 0;
@@ -169,6 +170,24 @@ input::placeholder {
   .buy-ticket-section {
     flex-direction: column;
   }
+  .buy-ticket-img-left {
+    width: 100%;
+    object-fit: cover;
+  }
+  .separator {
+    /* width: 200px;
+    height: 1px;
+    margin-right: 0px;
+    margin-bottom: 16px; */
+    display: none;
+  }
+  .buy-ticket-container {
+    padding-bottom: 40px;
+  }
+  p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
 }
 
 @media (max-width: 700px) {
@@ -177,6 +196,18 @@ input::placeholder {
   }
   h1 {
     font-size: 48px;
+  }
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .full-with-mobile {
+    width: 100%;
+  }
+  .footer-left {
+    text-align: center;
+    margin-bottom: 32px;
+    padding-right: 0;
   }
 }
 
